lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:51: error: ')' expected but ',' found.
if (getVitesseY() <= -9,5) {setPousseeDesiree(4)} else {setPousseeDesiree(3)} }
                       ^Lander:51: error: illegal start of simple expression
if (getVitesseY() <= -9,5) {setPousseeDesiree(4)} else {setPousseeDesiree(3)} }
                                                                              ^